make sure the floating note is not too large

--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -441,4 +441,5 @@ div.note {
   float: right;
   margin: 5px;
   font-size: 85%;
+  max-width: 300px
 }
